# sandbox-runtime

./: Cargo.toml  LICENSE  NOTICE  README.md  build.rs
src/: cli.rs  config.rs  error.rs  lib.rs  manager.rs  platform.rs  schemas.rs
src/proxy/: filter.rs  http.rs  mod.rs  socks.rs
src/sandbox/: dangerous.rs  linux.rs  macos.rs  mod.rs  seccomp.rs  violation.rs
src/utils/: command.rs  debug.rs  glob.rs  mod.rs  path.rs  ripgrep.rs  shell.rs  which.rs
tests/: config_integration.rs  manager_tests.rs  proxy_integration.rs  sandbox_macos_integration.rs
